--- a/32 - Atividade Despertador/platformio.ini
+++ b/32 - Atividade Despertador/platformio.ini
@@ -11,4 +11,8 @@
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
+monitor_echo = true
 framework = arduino
+lib_deps = 
+	ropg/ezTime@^0.8.3
+	marcoschwartz/LiquidCrystal_I2C@^1.1.4
